--- a/index.html
+++ b/index.html
@@ -18,21 +18,21 @@
 </nav>
 
 <section>
-<h1>Author Carpentry : Lesson Template</h1>
+<h1>Author Carpentry : Creating executable documents using RStudio and Rmarkdown</h1>
 
-<p>A description of the lesson goes here.  If you&rsquo;re reading this on the github
-repo, you see the rendered lesson at:</p>
+<p>*Content Contributors: Sebastian Karcher *</p>
 
-<p><a href="http://authorcarpentry.github.io/lesson-template-mkpage">http://authorcarpentry.github.io/lesson-template-mkpage</a></p>
-
-<p>This example is testing using the mkpage site generation tool as an alternative
-to Jekyll.  Full usage information is at the bottom of the page</p>
-
-<p>**Content Contributors: Name **</p>
-
-<p>**Lesson Maintainers: Name **</p>
+<p>*Lesson Maintainers: Sebastian Karcher *</p>
 
 <p><strong>Lesson status: In Development</strong></p>
+
+<h2>Learning Objectives:</h2>
+
+<ul>
+<li>Using RStudio as a markdown environment</li>
+<li>Integrating your data and code with your document</li>
+<li>Creating figures in your document</li>
+</ul>
 
 <h2>Topics:</h2>
 
@@ -97,7 +97,6 @@ Desktop application or the command line command using
 <li>Add individual .md files with lesson topics in repository with leading numbers like: 00-topic1.md;
 01-topic2.md</li>
 <li>Edit nav.md to set links in the navigation bar</li>
-<li>Edit CONTRIBUTORS as appropriate</li>
 </ul>
 
 <p>View Lesson</p>
