--- a/00-getting-started.html
+++ b/00-getting-started.html
@@ -11,85 +11,133 @@
 <nav>
 <ul>
 <li><a href=".">Lesson</a></li>
-<li><a href="00-getting-started.html">Topic 1</a></li>
-<li><a href="01-working-with-openrefine.html">Topic 2</a></li>
+<li><a href="00-getting-started.html">Getting Started</a></li>
+<li><a href="01-markdown.html">Intro to Markdown</a></li>
+<li><a href="02-modifying-appearance.html">Document Appearance</a></li>
+<li><a href="03-dynamic.html">Dynamic Documents</a></li>
+<li><a href="04-publishing.html">Publishing</a></li>
 <li><a href="mailto:authorcarpentry@library.caltech.edu">Contact Us</a></li>
 </ul>
 
 </nav>
 
 <section>
-<h1>Getting Started with Open Refine</h1>
+<h1>Introduction to Reproducible Reporting</h1>
 
-<p>10 Minutes</p>
+<p>30 Minutes</p>
 
 <hr />
 
 <h2>Learning Objectives</h2>
 
 <ul>
-<li>Describe OpenRefine’s uses and applications.</li>
-<li>Differentiate data cleaning from data organization.</li>
-<li>Experiment with OpenRefine’s user interface.</li>
-<li>Locate helpful resources to learn more about OpenRefine.</li>
+<li>Discuss characteristics of a reproducible research report (also called &lsquo;executable research compendium&rsquo; or &lsquo;Paper of the Future&rsquo;)</li>
+<li>Explore a real-life reproducible research report</li>
+<li>Install R packages needed to create a research report in RStudio</li>
+<li>Render a provided reproducible report to HMTL, docx, and HTML slides using Rstudio, Rmarkdown, and the knitr package</li>
 </ul>
 
 <hr />
 
-<blockquote>
-<h2>Headline</h2>
-
-<p>Question Text</p>
-
-<blockquote>
-<h2>Solution</h2>
-
-<p>Solution test</p>
-</blockquote>
-</blockquote>
-
-<h2>Motivations for the Open Refine Lesson</h2>
+<h3>Has the research paper changed much in the last ~400 years?</h3>
 
 <ul>
-<li>It&rsquo;s really important that you know what you did. More journals/grants/etc. are also making it important for them to know what you did. You can capture all steps done to your data in Open Refine to the raw file and share them with your publication as supplemental material.</li>
-<li>All steps are easily reversed in Refine.</li>
-<li>You <em>must</em> save your work to a new file; Refine <em>does not</em> modify your original dataset.</li>
-<li>Data is often very messy - and this tool saves a lot of cleaning headaches.</li>
-<li>Data cleaning steps often need repeating with multiple files. Refine is perfect for speeding up repetitive tasks.</li>
-<li>Some concepts like clustering algorithms are quite complex, but Refine makes it easy to introduce them, use them, and show their power.</li>
+<li><em>Philosophical Transactions of the Royal Society</em> first published in 1665<br /></li>
+<li>This first scientific journal established the important principles of scientific priority and peer review, which have become the central foundations of scientific journals ever since.</li>
 </ul>
 
-<h2>Before we get started</h2>
+<p><img src="img/transactions.gif" alt="Transactions of the Royal Society, 1714" />
+Source: Royal Society of London, <a href="http://rstl.royalsocietypublishing.org/">http://rstl.royalsocietypublishing.org/</a></p>
+
+<h3>Fast forward ~ 400 years</h3>
+
+<h4>The scholarly record requires four key functions of a research report:</h4>
+
+<ol>
+<li>Registration of the author&rsquo;s claim</li>
+<li>Certification that the research was conducted properly</li>
+<li>Dissemination of the work to the right audiences</li>
+<li>Preservation to ensure a permanent public record of the work that can be found and cited</li>
+</ol>
+
+<p>(Rallison, S.P., &lsquo;What are Journals For?&rsquo;, <em>Ann R Coll Surg Engl.</em> 2015 Mar; 97(2): 89-91. DOI:10.1308/003588414X14055925061397)</p>
+
+<hr />
+
+<h4>Why static PDFs are an underwhelming use of today&rsquo;s technology</h4>
+
+<p>We now have the tools to create a first class research report that meets these 4 requirements and is also Transparent, Re-Useable, and Reproducible.</p>
+
+<p>**A Reproducible Research Report **:</p>
+
+<ol>
+<li>Written and coded in plain text which is universally portable and readable by humans and machines</li>
+<li>Combines text explanations with code and dynamically generated figures, tables, and plots, all in one executable file</li>
+<li>Replaces static numbers, dates, and other values in the text with code that generates the most accurate and up-to-date values by the computer</li>
+<li>Allows the author to work in the same environment used to write the code and analyze the data, and generate the plots and tables</li>
+<li>They allow the author to compose one report and then compile/render it to many different outputs, depending on the need</li>
+</ol>
+
+<h4>Let&rsquo;s look at a reproducible report</h4>
 
 <ul>
-<li>Check that you have Firefox or Chrome browsers installed. Open Refine runs in your default browser. It will not run correctly in Internet Explorer.</li>
-<li>Download software from <a href="http://openrefine.org">http://openrefine.org</a> if you have not done this yet.</li>
-<li>Unzip the downloaded file into a directory by double-clicking it (Mac) or right-clicking and selecting &ldquo;Extract&hellip;&rdquo; on Windows. Name that directory something like Open-Refine.</li>
-<li>Go to your newly created Open-Refine directory.</li>
-<li>Launch Open Refine
+<li><p>We&rsquo;ll create our own in the next two days!</p></li>
 
-<ul>
-<li>Windows: Click the google-refine.exe (this will launch a command prompt window, but you can ignore that and wait for the browser to launch)</li>
-<li>Mac: Drag icon into Applications folder, and Ctrl-click/Open&hellip; it. (See <a href="https://support.apple.com/kb/PH21769?locale=en_US">this article</a> for more information on what you&rsquo;re doing here.)</li>
-<li>Linux: Type <code>./refine</code> into the terminal within the OpenRefine directory</li>
-</ul></li>
-<li>Note: this is a Java program that runs on your machine (not in the cloud). It runs inside your browser, but no web connection is needed.</li>
-<li>If you are using a different browser, or OpenRefine does not automatically open for you, point your browser at <a href="http://127.0.0.1:3333/">http://127.0.0.1:3333/</a> or <a href="http://localhost:3333">http://localhost:3333</a> to launch the program.</li>
+<li><p>The first step in getting this dynamic document is making sure our software
+is set up correctly</p></li>
 </ul>
 
-<h2>Basics of Open Refine</h2>
+<hr />
 
-<p>You can find out a lot more about Open Refine at [<a href="http://openrefine.org](">http://openrefine.org](</a>) and check out some great introductory videos. There is a <a href="https://groups.google.com/forum/?hl=en#!forum/openrefine">Google Group</a> that can answer a lot of beginner questions and problems. There is also an <a href="https://plus.google.com/communities/117280693504889048168">Open Refine Google Plus community</a> where you can find a lot of help and a lot of folks from the life sciences are members. As with other programs of this type, Open Refine libraries are available too, where you can find a script you need and copy it into your Refine instance to run it on your dataset.</p>
+<h3>Software Check</h3>
 
-<h2>Features</h2>
+<h3>Intro to Rmarkdown and the knitr package</h3>
+
+<p>For this lesson, we need the following packages:</p>
 
 <ul>
-<li>Open source (<a href="https://github.com/OpenRefine/OpenRefine">source on GitHub</a>).</li>
-<li>A large growing community, from novice to expert, ready to help.</li>
-<li>Works with large-ish datasets (100,000 rows). Does not scale to many millions. (yet).</li>
+<li><code>tidyverse</code></li>
+<li><code>DT</code></li>
+<li><code>rorcid</code></li>
+<li><code>httpuv</code></li>
 </ul>
 
-<p>Next: <a href="01-working-with-openrefine.html">Working with OpenRefine</a></p>
+<p>Open up RStudio, go to the packages panel, and search for each package to
+install.</p>
+
+<p>Now let&rsquo;s actually work with a document.  Click in the &lsquo;Files&rsquo; tab in the lower
+right panel of RStudio.  Let&rsquo;s find the <code>DTYourName2018</code> folder we cloned above.   You&rsquo;ll see
+lots of files we will use during this lesson.  Double click on
+<code>Base_2013_day1_in.Rmd</code>.</p>
+
+<p>You&rsquo;ll see the document open in a new panel on the left hand side of the
+screen.  In the top section of the document, replace the name with your own and change the date to today.</p>
+
+<p>Knitting is a process in Rstudio that takes a text document and turns it into
+an output (like html, docx, or html slides).  Now click the knit button in the upper
+left hand corner of the editor.    The first
+time you do this you&rsquo;ll get a message that you need to install some packages.
+You&rsquo;ll want to click Yes and wait for the packages to install.  Once the
+installation you&rsquo;ll see an interactive demonstration document!</p>
+
+<p>You can output this single file in multiple formats.  By default we&rsquo;ve been be
+generating .html files, but we can also output to a Word document.  If you
+click on the downward arrow next to the knit button we see some default
+formats.  Click on Word, and a Word document will appear.</p>
+
+<p>While pdf is an option, this requires a TeX distribution which is complex to
+install and beyond the scope of  this course.</p>
+
+<p>You can also select other output forms that aren&rsquo;t listed in the <code>knitr</code>
+dropdown.  Take a look at the document.  You&rsquo;ll see in the top a section called
+<code>output</code> with sections under it like <code>html_document</code>.  If we change the top
+output knit will produce a different result.  Try replacing <code>word_document</code>
+with <code>slidy_presentation</code>.  This is a html presentation that you can use in
+any web browser.</p>
+
+<p>We&rsquo;ll continue working on this document to create a reproducible research report !</p>
+
+<p>Next: <a href="01-markdown.html">Basic Markdown</a></p>
 
 </section>
 
