--- a/index.html
+++ b/index.html
@@ -11,62 +11,66 @@
 <nav>
 <ul>
 <li><a href=".">Lesson</a></li>
-<li><a href="00-getting-started.html">Topic 1</a></li>
-<li><a href="01-working-with-openrefine.html">Topic 2</a></li>
+<li><a href="00-getting-started.html">Getting Started</a></li>
+<li><a href="01-markdown.html">Intro to Markdown</a></li>
+<li><a href="02-modifying-appearance.html">Document Appearance</a></li>
+<li><a href="03-dynamic.html">Dynamic Documents</a></li>
+<li><a href="04-publishing.html">Publishing</a></li>
 <li><a href="mailto:authorcarpentry@library.caltech.edu">Contact Us</a></li>
 </ul>
 
 </nav>
 
 <section>
-<h1>Author Carpentry : Creating executable documents using RStudio and Rmarkdown</h1>
+<h1>Author Carpentry at RDA/CODATA DataTrieste2018: Reproducible Research Reporting with Open Authoring Tools</h1>
 
-<p>*Content Contributors: Sebastian Karcher *</p>
+<ul>
+<li><p><em>Instructor: Gail Clement</em></p></li>
 
-<p>*Lesson Maintainers: Sebastian Karcher *</p>
+<li><p><em>Lesson Development: Gail Clement, Tom Morrell, Donna Wrublewski, Robert Doeil, Yuvi Panda</em></p></li>
+</ul>
 
 <p><strong>Lesson status: In Development</strong></p>
 
-<h2>What you will learn:</h2>
+<h3>What you will learn:</h3>
 
 <ul>
-<li>Using RStudio as a markdown environment</li>
-<li>Integrating your data and code with your document</li>
-<li>Creating figures in your document</li>
+<li>Identify the features of a reproducible and dynamic research report that is fit to enter the scholarly record.</li>
+<li>Describe the benefits of composing research reports with open authoring tools.</li>
+<li>Apply an open, text-based workflow for creating a paper that combines dynamic text, code and software.</li>
+<li>Use the Rmarkdown-Knitr-Pandoc workflow to convert openly authored documents for publication, online posting and professional presentation.</li>
+<li>Demonstrate use of the RStudio GUI platform for authoring and producing professional-quality research reports.</li>
 </ul>
 
-<h2>Topics:</h2>
+<h3>Topics:</h3>
 
 <ol>
-<li><a href="00-getting-started.html">Topic 1</a></li>
-<li><a href="01-working-with-openrefine.html">Topic 2</a></li>
-<li><a href="02-scripts.html">Topic 3</a></li>
-<li><a href="03-save-export.html">Topic 4</a></li>
+<li><a href="01-getting-started.html">Day 1: Introduction</a></li>
+<li><a href="02-markdown.html">Day 2: Basic Markdown</a></li>
+<li><a href="03-modifying-appearance.html">Day 3: Document Appearance</a></li>
+<li><a href="04-dynamic.html">Day 4: Dynamic Documents</a></li>
+<li><a href="05-publishing.html">Day 5: Publishing</a></li>
 </ol>
 
-<h3>Optional</h3>
-
-<ul>
-<li><a href="04-services.html">Topic 5</a></li>
-</ul>
-
-<h2>Data</h2>
-
-<p>Data files for the lesson are available here:</p>
-
-<h2>Requirements</h2>
+<h3>Requirements</h3>
 
 <p>Author Carpentry&rsquo;s teaching is hands-on, so participants are encouraged to use
 their own computers to insure the proper setup of tools for an efficient
 workflow.
 <em>These lessons assume no prior knowledge of the skills or tools</em>, but working
-through this lesson requires working copies of the software described below.
-To most effectively use these materials, please make sure to install everything
-<em>before</em> working through this lesson.</p>
+through this lesson requires working copies of R and Rstudio.
+We&rsquo;ll work through software installation during the first day.</p>
 
-<h2>Cheat Sheet</h2>
+<h3>Related Resources</h3>
 
-<h2>References</h2>
+<ul>
+<li><a href="http://indico.ictp.it/event/8329/">DataTrieste2018 Home</a></li>
+<li><a href="https://hackmd.io/s/Sy05DjEH7#">Hackmd course notes</a></li>
+<li><a href="https://authorcarpentry.github.io/DT2018/">AuthorCarpentry Home</a></li>
+<li><a href="https://authorcarpentry.github.io/DTSTUDENT2018/">Exercise Files for Participant</a>
+
+<br /></li>
+</ul>
 
 </section>
 
