--- a/CONDUCT.html
+++ b/CONDUCT.html
@@ -11,8 +11,11 @@
 <nav>
 <ul>
 <li><a href=".">Lesson</a></li>
-<li><a href="00-getting-started.html">Topic 1</a></li>
-<li><a href="01-working-with-openrefine.html">Topic 2</a></li>
+<li><a href="00-getting-started.html">Getting Started</a></li>
+<li><a href="01-markdown.html">Intro to Markdown</a></li>
+<li><a href="02-modifying-appearance.html">Document Appearance</a></li>
+<li><a href="03-dynamic.html">Dynamic Documents</a></li>
+<li><a href="04-publishing.html">Publishing</a></li>
 <li><a href="mailto:authorcarpentry@library.caltech.edu">Contact Us</a></li>
 </ul>
 
