--- a/01-markdown.html
+++ b/01-markdown.html
@@ -49,7 +49,9 @@
 
 <h4>Step 1.</h4>
 
-<p>In RStudio, navigate through the <code>Files</code> pane to the <code>DTYourName2018</code> subfolder and open the exercise file <code>Base_2013_day2_in.Rmd</code>. Immediately save it as <code>Base_2013_day2_out.Rmd</code> and close the &lsquo;in&rsquo; file. We will  continue to work on the &lsquo;out&rsquo; file during this lesson.  By the end of the course, that &lsquo;out&rsquo; file will be ready to publish online, showcasing your open authoring skills!</p>
+<p>Now open the exercise file <code>Base_2013_start.Rmd</code>. Immediately save it as
+<code>Base_2013.Rmd</code> and close the &lsquo;start&rsquo; file. We will  continue to work on the
+Base_2013 file during this lesson.  By the end of the course, that file will be ready to publish online, showcasing your open authoring skills!</p>
 
 <h4>Step 2. Note that the <code>.Rmd</code> exercise file has three main components:</h4>
 
