--- a/02-modifying-appearance.html
+++ b/02-modifying-appearance.html
@@ -92,7 +92,7 @@ HTMl output  by adding the line <code>css: custom.css</code> to your YAML header
 <p>You can customize Word document styling, such as fonts, sizing, and section
 numbering, within the  Word program.  You can then provide <code>knitr</code> with the stylized Word document to use as a style sheet of sorts .  Because editing word document styling
 is a pain, we&rsquo;ve created a Word document with section numbering that you can use.
-You just need to add <code>reference_docx: &quot;Base_2013_day3_style.docx&quot;</code> to the YAML
+You just need to add <code>reference_docx: &quot;Base_2013_style.docx&quot;</code> to the YAML
 header for the <code>word_document</code> type and knit to see the result.</p>
 
 <h2>Integrated Code</h2>
