--- a/03-dynamic.html
+++ b/03-dynamic.html
@@ -123,6 +123,23 @@
 <li><p>Knit to HTML and find where your manually typed institution name has been replaced with the auto-populated Institution name you selected.</p></li>
 </ol>
 
+<p>Paramters can do more than control text.  Let&rsquo;s use a paramter to make changes
+to a graph</p>
+
+<ol>
+<li><p>Open the file <code>insert_params2.txt</code> and copy all of the code. Close the file
+and paste the code into the YAML header</p></li>
+
+<li><p>Open the file <code>insert_plot1_params.txt</code> and copy all the code.  Close the
+file and paste the code into the first plot code chunk</p></li>
+
+<li><p>Knit with parameters.  You&rsquo;ll see a new option that will set whether the
+plot is for all DOAJ seal journals or just those that charge a fee.</p></li>
+</ol>
+
+<p>If there is time, you can adapt this parameter code to the other plot in the
+report.</p>
+
 <h2>Autopopulate your Biosketch from your ORCID profile on the web</h2>
 
 <p>This final dynamic feature demonstrates the power of keeping your updated professional information in your ORCID profile, and copying information from it as you need it in your reproducible report.</p>
