--- a/04-publishing.html
+++ b/04-publishing.html
@@ -48,12 +48,38 @@ settings on GitHub.  Scroll down to the GHPages section and click the dropbown
 to select masster.  Click Save.  If you now scroll down to the GHPages section
 you&rsquo;ll see a github.io url.  Copy this and go back to the code section of your GitHub Repository.  Click and add the url.  If you click on this link you&rsquo;ll see your report!</p>
 
-<h3>Rpubs (<em>Optional if time allows</em>)</h3>
+<h3>Rpubs</h3>
 
 <p>Open your document in Rstudio.  Click Knit.  You&rsquo;ll see a publish button in the
 item view pane - click it.  You&rsquo;ll be redirected to the rpubs web site.  If you
 don&rsquo;t have an account you&rsquo;ll need to register.  You&rsquo;ll see a screen with basic
 metadata, but all is optional.  Your document is published online!</p>
+
+<h3>Binder</h3>
+
+<p>We need to copy all files used by knitter into our GitHub repository.  Make a
+copy of your .Rmd file that doesn&rsquo;t include the ORCID section (The
+authentication is a pain).  Then we
+need to tell Binder that we want to run R and what our dependencies are.  In
+GitHub, create a <code>runtime.txt</code> file that contains: <code>r-2018-07-09</code>.  This
+chooses a version of R at the date indicated.  Next create a <code>install.R</code> file
+that contains:</p>
+
+<pre><code>install.packages(&quot;rmarkdown&quot;)
+install.packages(&quot;bitops&quot;)
+install.packages(&quot;caTools&quot;)
+install.packages(&quot;tidyverse&quot;)
+install.packages(&quot;DT&quot;)
+</code></pre>
+
+<p>Now edit the README file in Github and add:</p>
+
+<pre><code>https://mybinder.org/v2/gh/AuthorCarpentry/R-Binder/master?urlpath=rstudio
+</code></pre>
+
+<p>replacing <code>AuthorCarpentry</code> with your GitHub account name and <code>R-Binder</code> with
+your GitHub repository name.  Click the Binder button and your environment will
+load (it might take up to 20 mins the first time).</p>
 
 <h2>Wrapup</h2>
 
