--- a/index.html
+++ b/index.html
@@ -22,12 +22,11 @@
 </nav>
 
 <section>
-<h1>Author Carpentry at RDA/CODATA DataTrieste2018: Reproducible Research Reporting with Open Authoring Tools</h1>
+<h1>Reproducible Research Reporting with R and RStudio</h1>
 
 <ul>
-<li><p><em>Instructor: Gail Clement</em></p></li>
-
-<li><p><em>Lesson Development: Gail Clement, Tom Morrell, Donna Wrublewski, Robert Doeil, Yuvi Panda</em></p></li>
+<li><em>Maintainers: Gail Clement, Tom Morrell</em></li>
+<li><em>Lesson Content: Gail Clement, Tom Morrell, Donna Wrublewski, Robert Doiel, Yuvi Panda</em></li>
 </ul>
 
 <p><strong>Lesson status: In Development</strong></p>
@@ -36,7 +35,7 @@
 
 <ul>
 <li>Identify the features of a reproducible and dynamic research report that is fit to enter the scholarly record.</li>
-<li>Describe the benefits of composing research reports with open authoring tools.</li>
+<li>Describe the benefits of composing research reports with open authoring tools in RStudio.</li>
 <li>Apply an open, text-based workflow for creating a paper that combines dynamic text, code and software.</li>
 <li>Use the Rmarkdown-Knitr-Pandoc workflow to convert openly authored documents for publication, online posting and professional presentation.</li>
 <li>Demonstrate use of the RStudio GUI platform for authoring and producing professional-quality research reports.</li>
@@ -45,11 +44,11 @@
 <h3>Topics:</h3>
 
 <ol>
-<li><a href="01-getting-started.html">Day 1: Introduction</a></li>
-<li><a href="02-markdown.html">Day 2: Basic Markdown</a></li>
-<li><a href="03-modifying-appearance.html">Day 3: Document Appearance</a></li>
-<li><a href="04-dynamic.html">Day 4: Dynamic Documents</a></li>
-<li><a href="05-publishing.html">Day 5: Publishing</a></li>
+<li><a href="00-getting-started.html">Introduction</a></li>
+<li><a href="01-markdown.html">Basic Markdown</a></li>
+<li><a href="02-modifying-appearance.html">Document Appearance</a></li>
+<li><a href="03-dynamic.html">Dynamic Documents</a></li>
+<li><a href="04-publishing.html">Publishing</a></li>
 </ol>
 
 <h3>Requirements</h3>
@@ -58,19 +57,43 @@
 their own computers to insure the proper setup of tools for an efficient
 workflow.
 <em>These lessons assume no prior knowledge of the skills or tools</em>, but working
-through this lesson requires working copies of R and Rstudio.
-We&rsquo;ll work through software installation during the first day.</p>
+through this lesson requires working copies of R and Rstudio.</p>
 
-<h3>Related Resources</h3>
+<p>R is a programming language that is especially powerful for data exploration,
+visualization, and statistical analysis. To interact with R, we use RStudio.
+For this workshop you&rsquo;ll need to install both R (version 3.4.3 or newer) and
+RStudio on your computer. Please follow these installation instructions before coming to the workshop</p>
 
-<ul>
-<li><a href="http://indico.ictp.it/event/8329/">DataTrieste2018 Home</a></li>
-<li><a href="https://hackmd.io/s/Sy05DjEH7#">Hackmd course notes</a></li>
-<li><a href="https://authorcarpentry.github.io/DT2018/">AuthorCarpentry Home</a></li>
-<li><a href="https://authorcarpentry.github.io/DTSTUDENT2018/">Exercise Files for Participant</a>
+<h4>Windows</h4>
 
-<br /></li>
-</ul>
+<p>Install R by downloading and running this
+<a href="https://cran.r-project.org/bin/windows/base/release.htm">.exe</a> file from CRAN.
+Also, please install the <a href="https://www.rstudio.com/products/rstudio/download/#download">RStudio
+IDE</a>.
+Note that if you have separate user and admin accounts, you should run the
+installers as administrator (right-click on .exe file and select &ldquo;Run as administrator&rdquo;
+instead of double-clicking). Otherwise problems may occur later, for example when installing R packages.</p>
+
+<h4>macOS</h4>
+
+<p>Install R by downloading and running this
+<a href="https://cran.r-project.org/bin/macosx/R-latest.pkg">.pkg</a> file from CRAN. Also,
+please install the <a href="https://www.rstudio.com/products/rstudio/download/#download">RStudio
+IDE</a>.</p>
+
+<h4>Linux</h4>
+
+<p>You can download the binary files for your distribution from
+<a href="https://cran.r-project.org/index.html">CRAN</a>. Or you can use your package
+manager (e.g. for Debian/Ubuntu run sudo apt-get install r-base and for
+Fedora run sudo dnf install R). Also, please install the <a href="https://www.rstudio.com/products/rstudio/download/#download">RStudio
+IDE</a>.</p>
+
+<h3>Workshop Files</h3>
+
+<p>You also need to <a href="data.zip">download some files</a> for this workshop.
+Extract this folder and put it on your desktop.  This is where we will be
+working throughout the workshop.</p>
 
 </section>
 
