--- a/00-getting-started.html
+++ b/00-getting-started.html
@@ -68,7 +68,7 @@ Source: Royal Society of London, <a href="http://rstl.royalsocietypublishing.org
 
 <p>We now have the tools to create a first class research report that meets these 4 requirements and is also Transparent, Re-Useable, and Reproducible.</p>
 
-<p>**A Reproducible Research Report **:</p>
+<p>**A Reproducible Research Report **</p>
 
 <ol>
 <li>Written and coded in plain text which is universally portable and readable by humans and machines</li>
@@ -80,12 +80,10 @@ Source: Royal Society of London, <a href="http://rstl.royalsocietypublishing.org
 
 <h4>Let&rsquo;s look at a reproducible report</h4>
 
-<ul>
-<li><p>We&rsquo;ll create our own in the next two days!</p></li>
+<p>(Demo of example report)</p>
 
-<li><p>The first step in getting this dynamic document is making sure our software
-is set up correctly</p></li>
-</ul>
+<p>We&rsquo;ll create our own in the next two days!  The first step in getting this dynamic document is making sure our software
+  is set up correctly</p>
 
 <hr />
 
