--- a/00-getting-started.html
+++ b/00-getting-started.html
@@ -124,9 +124,10 @@ an output (like html, docx, or html slides).  Now click the knit button in the u
 left hand corner of the editor.    The first
 time you do this you&rsquo;ll get a message that you need to install some packages.
 You&rsquo;ll want to click Yes and wait for the packages to install.  Once the
-installation you&rsquo;ll see an interactive demonstration document!</p>
+installation you&rsquo;ll see an interactive demonstration document in the newre tab
+in the lower right corner!</p>
 
-<p>You can output this single file in multiple formats.  By default we&rsquo;ve been be
+<p>You can output this single markdown document in multiple formats.  By default we&rsquo;ve been be
 generating .html files, but we can also output to a Word document.  If you
 click on the downward arrow next to the knit button we see some default
 formats.  Click on Word, and a Word document will appear.</p>
@@ -135,13 +136,14 @@ formats.  Click on Word, and a Word document will appear.</p>
 install and beyond the scope of  this course.</p>
 
 <p>You can also select other output forms that aren&rsquo;t listed in the <code>knitr</code>
-dropdown.  Take a look at the document.  You&rsquo;ll see in the top a section called
+dropdown.  Take a look at the markdown document.  You&rsquo;ll see in the top a section called
 <code>output</code> with sections under it like <code>html_document</code>.  If we change the top
 output knit will produce a different result.  Try replacing <code>word_document</code>
-with <code>slidy_presentation</code>.  This is a html presentation that you can use in
-any web browser.</p>
+with <code>slidy_presentation</code>.  Click Knit, and a html presentation that you can use in
+any web browser will appear.  If you look at the KNit dropdown, you&rsquo;ll see a
+slidy option is now present.</p>
 
-<p>We&rsquo;ll continue working on this document to create a reproducible research report!</p>
+<p>Close Base_2013_test.Rmd and get ready to create a reproducible research report!</p>
 
 <p>Next: <a href="01-markdown.html">Basic Markdown</a></p>
 
