--- a/01-markdown.html
+++ b/01-markdown.html
@@ -51,7 +51,7 @@
 
 <p>Now open the exercise file <code>Base_2013_start.Rmd</code>. Immediately save it as
 <code>Base_2013.Rmd</code> and close the &lsquo;start&rsquo; file. We will  continue to work on the
-Base_2013 file during this lesson.  By the end of the course, that file will be ready to publish online, showcasing your open authoring skills!</p>
+Base_2013 file during the rest of the workshop.  By the end that file will be ready to publish online, showcasing your open authoring skills!</p>
 
 <h4>Step 2. Note that the <code>.Rmd</code> exercise file has three main components:</h4>
 
@@ -65,9 +65,9 @@ Base_2013 file during this lesson.  By the end of the course, that file will be 
 
 <p><strong>YAML Header</strong></p>
 
-<p>In the <code>author</code> field, enter your own Name and Institution, with the entire string of text surrounded by &ldquo;quotes&rdquo;</p>
-
-<p>In the <code>date</code> field, enter the R code to call today&rsquo;s date from your computer. You may copy and paste this code from the R script file <code>insert_dates.R</code></p>
+<p>The YAML header includes information about the document.  In the <code>author</code>
+field, enter your own Name and Institution, with the entire string of text
+surrounded by &ldquo;quotes&rdquo;.</p>
 
 <p><strong>Text Document</strong></p>
 
@@ -92,7 +92,10 @@ meaning. For example,</p>
 <li>Create headings and subheadings by inserting one or more # symbols at the beginning of a line, followed by a space. One # is for a level one header, ## for a level two header and so on.</li>
 </ol>
 
-<p>For this Exercise, assign Level 1, 2, and 3 headers so the exercise file reflects the sections of a Data Management Plan. To find the start of each major section, where a Level 1 header should be placed, look for horizontal rules marked with four asterisks ****. To identify the eight main section headers, you may wish to consult the little booklet <em>DCC Checklist for a Data Management Plan</em> provided earlier.</p>
+<p>For this Exercise, assign Level 1, 2, and 3 headers so the exercise file reflects the sections
+of a Data Management Plan. To find the start of each major section, where a Level 1 header should be placed,
+look for horizontal rules marked with four asterisks ****. To identify the eight main section headers,
+you may wish to consult the <a href="http://www.dcc.ac.uk/sites/default/files/documents/resource/DMP/DMP_Checklist_2013.pdf">DCC Checklist for a Data Management Plan</a>.</p>
 
 <ol>
 <li><p>Add emphasis to the text, where appropriate, using single or double asterisks or single or double underscores. Either type of character works, as long as it is matched on both sides of the emphasized phrase. You may find text phrases that need emphasis such as &ldquo;Not Applicable&rdquo;; the title of the Project; and titles of reports or articles.</p></li>
@@ -116,11 +119,7 @@ meaning. For example,</p>
 <p>Find the name of a computer file (ending with &lsquo;.csv&rsquo;) in the exercise file and mark it up to represent inline code</p></li>
 
 <li><p>Create multiple links to content elsewhere by placing each link text in square brackets [] followed by the link address in round parentheses (). Don&rsquo;t forget to include http:// or https:// at the beginning of the link address.</p></li>
-</ol>
 
-<p>There is also one link that connects to another location within the document&hellip;can you find that one and see how this kind of link is marked up?</p>
-
-<ol>
 <li><p>Create one inline image by adding an exclamation mark ! in the text, then
 placing the image name  in square brackets [] followed by the image file
 address in round parentheses ().  (TIP: Make sure there is no space between the text in brackets and the address in parentheses!)</p></li>
@@ -132,12 +131,6 @@ address in round parentheses ().  (TIP: Make sure there is no space between the 
 <li><p>In the &ldquo;Data being collected&rdquo; section, where the text guesstimates the number of journals in the dataset as &ldquo;over 1000&rdquo;, replace with an accurate count performed by the computer. You may copy and paste the code from the file <code>insert_jnls_count.R</code></p></li>
 
 <li><p>You did alot of work! Save the file and knit it to both HTML and Word. Compare the results to see if anything changes based on output file format.</p></li>
-</ol>
-
-<p>If successful, save the exercise  file again under the name <code>Base_2013_day3_in.Rmd</code>. You&rsquo;ll pickup in the next lesson right where you leave off today.</p>
-
-<ol>
-<li>Minimize the RStudio window and return to your shell and navigate to the folder where the your workshop files reside. Using your new Git skills, add the files, commit them, and push the files back up to the GitHub repository. That way the current version of your files is saved in GitHub and all your work is backed up!</li>
 </ol>
 
 <p><strong>Congratulations on completing the first draft of your Reproducible Report!</strong></p>
