--- a/02-modifying-appearance.html
+++ b/02-modifying-appearance.html
@@ -123,6 +123,20 @@ this code will also execute and place a plot in the document.</p>
 <code>insert_plot2.txt</code> with the
 label &lsquo;plot_license&rsquo; before the &ldquo;Metadata&rdquo; section.</p>
 
+<h2>Dates</h2>
+
+<p>We can have R automatically populate dates based on the date we knit the
+document. The &lsquo;insert_dates.txt&rsquo; file has code snippets that use the function
+<code>Sys.Date()</code> to get the date from your computer.  The first line is a section
+of code enclosed in <code>&quot;</code> (double quotation marks) for the YAML header (all
+values in the YAML header use double quotes).  Kint the
+document and you see that this small snippet of code is executed and the date
+appears.  There are two additional code lines that include just a single `
+backtick that signified a small code chunk.  These can be just one line, and
+don&rsquo;t have the control of the three backtick code chunks we learned earlier.
+Knit your document and you&rsquo;ll see the dates appear in place of these code
+chunks.</p>
+
 <h2>References</h2>
 
 <p>References are another area of document preparation where automation is really
