--- a/03-dynamic.html
+++ b/03-dynamic.html
@@ -45,7 +45,8 @@
 
 <h2>Auto-generate bibliography files</h2>
 
-<p>Have you wondered why the YAML in the exercise file contains two separate bibliography files (<code>oajournals.bib</code> and <code>packages.bib</code>)? Why not make one concatenated file?</p>
+<p>Have you wondered why we include two separate bibliography files
+(<code>oajournals.bib</code> and <code>packages.bib</code>) in the data folder? Why not make one concatenated file?</p>
 
 <p>The reason for the two files is that some of the references cited in our reproducible report represent <code>R</code> packages used to generate the report. <code>R</code> packages are continually updated in the <a href="https://cran.r-project.org/">The Comprehensive R Archive Network, CRAN</a>. If we manually maintained the bibliography file we&rsquo;d be editing it continually to reflect the new version of any <code>R</code> package we use.</p>
 
@@ -58,7 +59,9 @@
 <li>Open the script file <code>write_bib.R</code> and on the third line &ndash; the one that starts with <code>write_bib(c(&quot;tidyverse&quot;...)</code> add <code>DT</code> and <code>rorcid</code>, each in quotes, to the list of packages you want references for.</li>
 <li>Save the changes to <code>write_bib.R</code></li>
 <li>Select all of the code in  <code>write_bib.R</code> with your mouse. Once it is all highlighted, press <code>command+enter</code> to execute the code. You can watch the code run in your console window.</li>
-<li>Open <code>packages.bib</code> file once again to see that it now includes a citation for the <code>DT</code> and <code>rorcid</code> packages we&rsquo;ll be using in a bit. Close that file and put a smiley sticky on your laptop to signify happiness.</li>
+<li>Open <code>packages.bib</code> file once again to see that it now includes a citation for the <code>DT</code> and <code>rorcid</code> packages we&rsquo;ll be using in a bit. Close that file.</li>
+<li>In the bibliography section of the YAML header, add a new line with
+<code>- packages.bib</code>, so you can include the references in your report.</li>
 </ol>
 
 <h2>Building in User Interaction (Part 1)</h2>
@@ -90,7 +93,7 @@
 <ol>
 <li><p>Open the R script <code>insert_DTtable.R</code> and copy all of the code with your mouse. Close the file.</p></li>
 
-<li><p>In the exercise file, scroll down to the Level One heading <strong>Annexes</strong> and paste in the code chunk. Save the change and knit the document to HTML to see the dynamic data table generated in your report.</p></li>
+<li><p>In the exercise file, scroll down to the Level One heading <strong>Supplement</strong> and paste in the code chunk. Save the change and knit the document to HTML to see the dynamic data table generated in your report.</p></li>
 </ol>
 
 <p>Knit to HTML and test the interactive features of this table. Why would this dynamic addition to the reproducible report not be supported in Word?</p>
@@ -116,11 +119,18 @@
 <ol>
 <li><p>Open the file <code>insert_params.txt</code> and copy all of the code. Close the file.</p></li>
 
-<li><p>In the YAML header of the exercise file ( at the bottom, before the three ending dashes), paste in the copied code <code>r params$institution</code>. If you wish to change the names of any of the Institutions listed, feel free to do so. Just make sure there are at least four Institutions included in the list. Save the changes.</p></li>
+<li><p>In the YAML header of the exercise file ( at the bottom, before the three
+ending dashes), paste in the copied code. If you wish to change the names of
+any of the Institutions listed, feel free to do so. Just make sure there are at
+least four Institutions included in the list. Save the changes.</p></li>
 
-<li><p>In the the body text of the exercise file, find five occurrences of your Institution name. To find the occurrences in the main body of the text, use the &lsquo;Find&rsquo; option under RStudio&rsquo;s Edit menu. Replace each occurrence of an Institution name with the code <code>r params$institution</code>.  When you <code>knit with parameters</code>, the inline R code will automatically write in the name of your selected Institution.</p></li>
+<li><p>In the the body text of the exercise file, find five occurrences of your
+Institution name. To find the occurrences in the main body of the text, use
+the &lsquo;Find&rsquo; option under RStudio&rsquo;s Edit menu. Replace each occurrence of an
+Institution name with the code <code>\</code>r params$institution`<code>.  When you 
+</code>knit with parameters`, the inline R code will automatically write in the name of your selected Institution.</p></li>
 
-<li><p>Knit to HTML and find where your manually typed institution name has been replaced with the auto-populated Institution name you selected.</p></li>
+<li><p>Knit with parameters to HTML and find where your manually typed institution name has been replaced with the auto-populated Institution name you selected.</p></li>
 </ol>
 
 <p>Paramters can do more than control text.  Let&rsquo;s use a paramter to make changes
@@ -130,8 +140,8 @@ to a graph</p>
 <li><p>Open the file <code>insert_params2.txt</code> and copy all of the code. Close the file
 and paste the code into the YAML header</p></li>
 
-<li><p>Open the file <code>insert_plot1_params.txt</code> and copy all the code.  Close the
-file and paste the code into the first plot code chunk</p></li>
+<li><p>Open the file <code>insert_plot2_params.txt</code> and copy all the code.  Close the
+file and paste the code into the plot code chunk titled <code>plot_license</code></p></li>
 
 <li><p>Knit with parameters.  You&rsquo;ll see a new option that will set whether the
 plot is for all DOAJ seal journals or just those that charge a fee.</p></li>
