--- a/04-publishing.html
+++ b/04-publishing.html
@@ -39,7 +39,7 @@
 <p>In your GitHub account, create a new repository (the
 name doesn&rsquo;t matter) and make sure to check the box for Initialize this repo
 with a README file.  Open Finder of Windows explorer on your computer.
-Navigate to the DtSTUDENT2018 directory and find the .html file you&rsquo;ve been knitting.
+Navigate to the data directory and find the .html file you&rsquo;ve been knitting.
 Rename this file to <code>index.html</code>.</p>
 
 <p>On GitHub, click on &lsquo;Upload a file&rsquo;. Drag
